06-argocd/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: main
  namespace: gateway
spec:
  gatewayClassName: envoy

  listeners:
    - name: https
      hostname: argocd.bitrunner.home.arpa
      port: 443
      protocol: HTTPS

      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: argocd-tls

      allowedRoutes:
        namespaces:
          from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https

  hostnames:
    - argocd.bitrunner.home.arpa

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
